2007-05-28  Bruno coudoin  <bruno.coudoin@free.fr>

	- The click on letter activity was only proposing the first 4 letters
	  of the alphabet, whatever the level.
	  (Bug reported by Yannis)

	* src/boards/click_on_letter.c: (click_on_letter_create_item):

2007-05-26  Bruno coudoin  <bruno.coudoin@free.fr>

	Removed x86 binary used for the build and fixed the makefile to
	make sure it's recreated.

	* src/libart_lgpl/Makefile.am:

2007-05-23  Bruno coudoin  <bruno.coudoin@free.fr>

	- bug reported by Khaled, in arabic wordsgame is missing the character
	  ZERO WIDTH JOINER to force joined char in Arabic and Hangul
          see http://en.wikipedia.org/wiki/Zero-width_joiner

	* src/boards/wordsgame.c: (key_press):

2007-05-23  Bruno coudoin  <bruno.coudoin@free.fr>

	- major packaging change, imported libart_lgpl and libgnomecanvas
	  from gnome svn (trunk). We now build them as static library.
	  Packager change, you no more need them in GCompris require's.

	* INSTALL:
	* configure.in:
	* install-sh:
	* src/Makefile.am:
	* src/gcompris/Makefile.am:
	* src/gcompris/gcompris.c: (main):
	* src/gcompris/soundutil.c: (fx_play):
	* src/libart_lgpl/AUTHORS:
	* src/libart_lgpl/COPYING:
	* src/libart_lgpl/ChangeLog:
	* src/libart_lgpl/Makefile:
	* src/libart_lgpl/Makefile.am:
	* src/libart_lgpl/Makefile.in:
	* src/libart_lgpl/NEWS:
	* src/libart_lgpl/README:
	* src/libart_lgpl/README.CVS:
	* src/libart_lgpl/art_affine.c: (art_affine_point),
	(art_affine_invert), (art_affine_flip), (art_ftoa),
	(art_affine_to_string), (art_affine_multiply),
	(art_affine_identity), (art_affine_scale), (art_affine_rotate),
	(art_affine_shear), (art_affine_translate), (art_affine_expansion),
	(art_affine_rectilinear), (art_affine_equal):
	* src/libart_lgpl/art_affine.h:
	* src/libart_lgpl/art_alphagamma.c: (art_alphagamma_new),
	(art_alphagamma_free):
	* src/libart_lgpl/art_alphagamma.h:
	* src/libart_lgpl/art_bpath.c: (art_bpath_affine_transform):
	* src/libart_lgpl/art_bpath.h: